[gd_scene load_steps=8 format=3 uid="uid://nr2stsv6daql"]

[ext_resource type="Script" path="res://StartMenu.gd" id="1_6oaex"]
[ext_resource type="Texture2D" uid="uid://bhqo401dicgee" path="res://campus crisis icon.png" id="2_4krbc"]
[ext_resource type="Texture2D" uid="uid://cbh0a1kwbcku0" path="res://CLB level 1.png" id="2_wikjw"]
[ext_resource type="Texture2D" uid="uid://c5m4bm2jcldf1" path="res://coins.png" id="3_no3hd"]
[ext_resource type="FontFile" uid="uid://87gla4t0j7vs" path="res://addons/denmark-regular-webfont.ttf" id="4_slonh"]
[ext_resource type="Texture2D" uid="uid://dhus31pofl3v5" path="res://tutorial tilemap.png" id="5_kyaj6"]
[ext_resource type="Texture2D" uid="uid://cd4qsmhl40gkj" path="res://tutorial ui/inventoryIcon1.png" id="7_celry"]

[node name="StartMenu" type="Node2D"]
script = ExtResource("1_6oaex")
metadata/_edit_horizontal_guides_ = [2999.0]
metadata/_edit_vertical_guides_ = [7800.0]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 7800.0
offset_bottom = 2999.0
color = Color(0.815686, 0.815686, 0, 0.6)

[node name="campus crisis logo" type="Sprite2D" parent="."]
position = Vector2(3658, 1577)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_4krbc")

[node name="CoinsIcon" type="Sprite2D" parent="."]
position = Vector2(6533, 217)
scale = Vector2(2, 2)
texture = ExtResource("3_no3hd")

[node name="Coins" type="Label" parent="."]
offset_left = 6868.0
offset_top = 91.0
offset_right = 7117.0
offset_bottom = 395.0
theme_override_colors/font_color = Color(0.976471, 0.847059, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_slonh")
theme_override_font_sizes/font_size = 300
text = "0"

[node name="levels" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1425.0
offset_top = 14.0
offset_right = 4688.0
offset_bottom = 2976.0
mouse_filter = 1

[node name="ScrollContainer" type="ScrollContainer" parent="levels"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 911.0
offset_top = -11.0
offset_right = 3105.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="levels/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Sprite2D2" type="Sprite2D" parent="levels/ScrollContainer/VBoxContainer"]
position = Vector2(1426.75, 666)
scale = Vector2(2.50044, 3.03846)
texture = ExtResource("5_kyaj6")

[node name="Label5" type="Label" parent="levels/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 500

[node name="tutorial" type="Button" parent="levels/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_slonh")
theme_override_font_sizes/font_size = 500
text = "Tutorial"

[node name="Sprite2D" type="Sprite2D" parent="levels/ScrollContainer/VBoxContainer"]
position = Vector2(1333.35, 1787.5)
scale = Vector2(2.52834, 2.72391)
texture = ExtResource("2_wikjw")

[node name="Label" type="Label" parent="levels/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 500
text = "
"

[node name="CLB level 1" type="Button" parent="levels/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("4_slonh")
theme_override_font_sizes/font_size = 500
text = "CLB level 1"

[node name="Label2" type="Label" parent="levels/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 500
text = "
"

[node name="CLB level 6" type="Button" parent="levels/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("4_slonh")
theme_override_font_sizes/font_size = 500
text = "CLB level 6"

[node name="Label3" type="Label" parent="levels/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 500
text = "
"

[node name="PGP" type="Button" parent="levels/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("4_slonh")
theme_override_font_sizes/font_size = 500
text = "PGP"

[node name="Label4" type="Label" parent="levels/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 500

[node name="UTown" type="Button" parent="levels/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("4_slonh")
theme_override_font_sizes/font_size = 500
text = "UTown"

[node name="inventory" type="Button" parent="."]
offset_left = 5735.0
offset_top = 18.0
offset_right = 6750.0
offset_bottom = 1026.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 1
text = "Inventory"
icon = ExtResource("7_celry")
flat = true

[node name="Label" type="Label" parent="inventory"]
layout_mode = 0
offset_left = 24.0
offset_top = 588.0
offset_right = 935.0
offset_bottom = 792.0
theme_override_fonts/font = ExtResource("4_slonh")
theme_override_font_sizes/font_size = 200
text = "Inventory"

[connection signal="pressed" from="levels/ScrollContainer/VBoxContainer/tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="levels/ScrollContainer/VBoxContainer/CLB level 1" to="." method="_on_clb_level_1_pressed"]
[connection signal="pressed" from="inventory" to="." method="_on_inventory_pressed"]
